k8s/hash-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hash-generator
  template:
    metadata:
      labels:
        io.kompose.service: hash-generator
    spec:
      containers:
        - name: hash-generator
          image: digitalreceipts/hash-generator
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hash-generator
  labels:
    io.kompose.service: hash-generator
spec:
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: hash-generator
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hash-generator
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hash-generator.digitala-kvitton.se
      http:
        paths:
          - backend:
              serviceName: hash-generator
              servicePort: 80
status:
  loadBalancer: {}
